# Reconstruction

./: .gitignore  CLEAN_PIPELINE_STRUCTURE.md  README.md  STANDARDIZED_PIPELINE_README.md  SYSTEM_REPORT.md  corrected_scaled_grid.py  end_to_end_validation.py  enhanced_dimension_preserving_reconstructor_v2.py  enhanced_dimension_preserving_reconstructor_v3.py  median_based_grid.py  ocr_old.py  pipeline_config.json  pipeline_orchestrator.py  proper_tableformer_evaluation.py  pyproject.toml  reconstruction_quality_evaluation.py  requirements.txt  requirements_visual_enhancement.txt  run_complete_pipeline.bat  run_complete_pipeline.py  run_pipeline.py  run_single_file_pipeline.bat  run_single_file_pipeline.py  simple_tableformer_reconstruction.py  tableformer_baseline_evaluation.py  tableformer_fine_tuning_pipeline.py  test_enhanced_v2_more_samples.py  test_enhanced_v3_complex.py  test_real_pubtabnet_validation.py  test_single_image.py  visualize_tableformer_grid.py
backend/: .gitignore  ARCHITECTURE.md  PLUGIN_SYSTEM.md  README.md  app.py  app_new.py  app_plugin.py  postman_collection.json  requirements.txt
myenv/: pyvenv.cfg
pipeline_stages/: docling_layout_table.py  file_reconstruction.py  grid_reconstruction.py  tesseract_ocr_extraction.py
reconstruction/: RECONSTRUCTION_ANALYSIS.md  batch_integrated_visualization.py  improved_fresh_reconstruction.py  integrated_visualization.py  layout_reconstruction.py  linear_reconstruction.py  ocr_integration.py  ocr_visualization.py  pipeline.py  reconctruction.py  run_reconstruction.py  single_reconstruction.py  table_reconstruction.py
(+39 files in other folders)
